--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.14.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
