--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "madge": "^8.0.0",
+    "ts-prune": "^0.10.3",
     "typescript": "~5.9.2"
   },
   "private": true
