--- a/package.json
+++ b/package.json
@@ -55,11 +55,11 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^24.10.0",
-    "@types/react": "^19.2.2",
+    "@types/react": "~19.1.10",
     "@types/react-day-picker": "^5.2.1",
-    "@types/react-dom": "^19.2.2",
+    "@types/react-dom": "~19.1.7",
     "@types/react-native": "^0.72.8",
     "@types/react-test-renderer": "^19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
